spiffe-keycloak/keycloak-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  annotations:
    meta.helm.sh/release-name: kagenti-deps
    meta.helm.sh/release-namespace: kagenti-system
  creationTimestamp: "2026-02-04T22:03:12Z"
  generation: 1
  labels:
    app: keycloak
    app.kubernetes.io/instance: kagenti-deps
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: kagenti-deps
    app.kubernetes.io/version: "1.0"
    helm.sh/chart: kagenti-deps-0.1.0
  name: keycloak
  namespace: keycloak
  resourceVersion: "3304"
  uid: 2770dc13-bb6f-4798-ac3f-95632bdd37ea
spec:
  persistentVolumeClaimRetentionPolicy:
    whenDeleted: Retain
    whenScaled: Retain
  podManagementPolicy: OrderedReady
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: keycloak
  serviceName: keycloak-discovery
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: keycloak
    spec:
      containers:
      - args:
        - start
        image: quay.io/keycloak/keycloak:26.5.2
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /health/live
            port: 9000
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        name: keycloak
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /health/ready
            port: 9000
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources:
          limits:
            cpu: 500m
            memory: 1500Mi
          requests:
            cpu: 100m
            memory: 512Mi
        startupProbe:
          failureThreshold: 600
          httpGet:
            path: /health/started
            port: 9000
            scheme: HTTP
          periodSeconds: 30
          successThreshold: 1
          timeoutSeconds: 60
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
  updateStrategy:
    rollingUpdate:
      partition: 0
    type: RollingUpdate
status:
  availableReplicas: 1
  collisionCount: 0
  currentReplicas: 1
  currentRevision: keycloak-857d8dddf4
  observedGeneration: 1
  readyReplicas: 1
  replicas: 1
  updateRevision: keycloak-857d8dddf4
  updatedReplicas: 1
