spiffe-keycloak/spire-oidc-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: spire-oidc-discovery
  namespace: spire-server
spec:
  parentRefs:
    - name: kagenti-gateway
      namespace: kagenti-system
  hostnames:
    - "oidc-discovery.localtest.me"
  rules:
    - backendRefs:
        - name: spire-spiffe-oidc-discovery-provider
          port: 80
